intel/bench_214_new/extr_.opensslcryptoeccurve25519.c_fe_tobytes_with_main/log.txt
bench_214_new/extr_.opensslcryptoeccurve25519.c_fe_tobytes_with_main/extr_.opensslcryptoeccurve25519.c_fe_tobytes_with_main.c:105:12: error: default initialization of an object of const type 'const fe' (aka 'int *const')
  const fe h;
           ^
             = nullptr
1 error generated.
HLS FPGA Parse FAILED.
